fix: Make table width uneven

--- a/packages/styles/table.css
+++ b/packages/styles/table.css
@@ -22,6 +22,7 @@
 }
 
 .Table {
+  table-layout: auto;
   font-size: var(--text-size-small);
   border-collapse: collapse;
   text-align: left;
